Refactor to replace Java 17 `record` types with standard classes for broader compatibility; downgrade Java compatibility to version 11